parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NEWLINE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMI vars funcion main
Rule 2     programa -> PROGRAM ID SEMI funcion main
Rule 3     programa -> PROGRAM ID SEMI vars main
Rule 4     programa -> PROGRAM ID SEMI main
Rule 5     main -> MAIN function_name verifica_name LPARENT RPARENT function_all end_main
Rule 6     vars -> vars list_vars SEMI
Rule 7     vars -> VAR list_vars SEMI
Rule 8     list_vars -> list_vars COMMA vars_array
Rule 9     list_vars -> list_vars COMMA ID vars_name vars_type
Rule 10    list_vars -> memType vars_array
Rule 11    list_vars -> memType ID vars_name vars_type
Rule 12    vars_array -> ID vars_name vars_type LSQUARE const RSQUARE add_memory
Rule 13    func_vars -> memType ID vars_name vars_type param_type COMMA func_vars
Rule 14    func_vars -> memType ID vars_name vars_type param_type
Rule 15    memType -> INT loType
Rule 16    memType -> FLOAT loType
Rule 17    memType -> CHAR loType
Rule 18    function_all -> LBRACKET vars statement_func RBRACKET
Rule 19    function_all -> LBRACKET vars RBRACKET
Rule 20    function_all -> LBRACKET statement_func RBRACKET
Rule 21    function_all -> LBRACKET RBRACKET
Rule 22    bloque -> LBRACKET statement_func RBRACKET
Rule 23    bloque -> LBRACKET RBRACKET
Rule 24    statement_func -> statement statement_func
Rule 25    statement_func -> statement
Rule 26    statement -> statement_assign SEMI
Rule 27    statement -> statement_function SEMI
Rule 28    statement -> statement_condition
Rule 29    statement -> statement_while
Rule 30    statement -> statement_for
Rule 31    statement -> statement_read SEMI
Rule 32    statement -> statement_write SEMI
Rule 33    statement -> statement_return SEMI
Rule 34    statement -> statement_statistics SEMI
Rule 35    statement_assign -> ID const_id LSQUARE const save_var RSQUARE EQ opera_add expression add_tabla
Rule 36    statement_assign -> ID const_id EQ opera_add expression add_tabla
Rule 37    expression -> ID const_id LSQUARE const save_var RSQUARE
Rule 38    expression -> expr oper_y AND opera_add expression
Rule 39    expression -> expr oper_y
Rule 40    expr -> expr_aux oper_o OR opera_add expr
Rule 41    expr -> expr_aux oper_o
Rule 42    expr_aux -> expr_sumres expr_rel LT opera_add expr_aux
Rule 43    expr_aux -> expr_sumres expr_rel LTE opera_add expr_aux
Rule 44    expr_aux -> expr_sumres expr_rel GT opera_add expr_aux
Rule 45    expr_aux -> expr_sumres expr_rel GTE opera_add expr_aux
Rule 46    expr_aux -> expr_sumres expr_rel SIM opera_add expr_aux
Rule 47    expr_aux -> expr_sumres expr_rel NE opera_add expr_aux
Rule 48    expr_aux -> expr_sumres expr_rel
Rule 49    expr_sumres -> expr_muldiv term_sumres PLUS opera_add expr_sumres
Rule 50    expr_sumres -> expr_muldiv term_sumres MINUS opera_add expr_sumres
Rule 51    expr_sumres -> expr_muldiv term_sumres
Rule 52    expr_muldiv -> const term_muldiv TIMES opera_add expr_muldiv
Rule 53    expr_muldiv -> const term_muldiv DIVENT opera_add expr_muldiv
Rule 54    expr_muldiv -> const term_muldiv DIVIDE opera_add expr_muldiv
Rule 55    expr_muldiv -> const term_muldiv MODULE opera_add expr_muldiv
Rule 56    expr_muldiv -> const term_muldiv POWER opera_add expr_muldiv
Rule 57    expr_muldiv -> const term_muldiv
Rule 58    const -> LPARENT fondo_virtual expression RPARENT pop_fondo_virtual
Rule 59    const -> INTEGERCTE const_int
Rule 60    const -> FLOATCTE const_float
Rule 61    const -> CHARCTE const_char
Rule 62    const -> ID const_id
Rule 63    funcion -> FUNCION VOID loType ID function_name parametro rev_quad function_all fin_funcion funcion
Rule 64    funcion -> FUNCION memType ID function_name parametro rev_quad function_all fin_funcion funcion
Rule 65    funcion -> FUNCION VOID loType ID function_name parametro rev_quad function_all fin_funcion
Rule 66    funcion -> FUNCION memType ID function_name parametro rev_quad function_all fin_funcion
Rule 67    parametro -> LPARENT func_vars RPARENT
Rule 68    parametro -> LPARENT RPARENT
Rule 69    statement_function -> ID existe_funcion crea_funcion LPARENT funcion_aux verifica_param RPARENT crea_subfuncion
Rule 70    statement_function -> ID existe_funcion crea_funcion LPARENT RPARENT crea_subfuncion
Rule 71    funcion_aux -> expression revisar_parametro
Rule 72    funcion_aux -> expression revisar_parametro cuenta_parametro COMMA funcion_aux
Rule 73    statement_condition -> IF LPARENT expression RPARENT THEN revisar_expression bloque ELSE else_expression bloque condition_end
Rule 74    statement_condition -> IF LPARENT expression RPARENT THEN revisar_expression bloque condition_end
Rule 75    statement_while -> WHILE opera_while LPARENT expression RPARENT condicion_while DO bloque loop_while
Rule 76    statement_for -> FOR opera_for statement_assign TO const compara_for condicion_for DO bloque aumenta loop_for
Rule 77    statement_read -> READ LPARENT read_1 RPARENT
Rule 78    read_1 -> ID read_instr read_1
Rule 79    read_1 -> ID read_instr
Rule 80    statement_write -> WRITE LPARENT write_1 RPARENT
Rule 81    write_1 -> expression write_instr COMMA write_1
Rule 82    write_1 -> STRINGCTE const_str write_instr COMMA write_1
Rule 83    write_1 -> expression write_instr
Rule 84    write_1 -> STRINGCTE const_str write_instr
Rule 85    statement_return -> RETURN return_function LPARENT expression RPARENT return_save_quadruple
Rule 86    statement_statistics -> MEDIA LPARENT const read_arg_mean RPARENT
Rule 87    statement_statistics -> MEDIANA LPARENT const read_arg_median RPARENT
Rule 88    statement_statistics -> MODA LPARENT const read_arg_mode RPARENT
Rule 89    statement_statistics -> VARIANZA LPARENT const read_arg_varianza RPARENT
Rule 90    statement_statistics -> ESDEV LPARENT const read_arg_esdev RPARENT
Rule 91    loType -> <empty>
Rule 92    vars_name -> <empty>
Rule 93    vars_type -> <empty>
Rule 94    add_memory -> <empty>
Rule 95    const_id -> <empty>
Rule 96    const_int -> <empty>
Rule 97    const_float -> <empty>
Rule 98    const_char -> <empty>
Rule 99    const_str -> <empty>
Rule 100   add_tabla -> <empty>
Rule 101   save_var -> <empty>
Rule 102   opera_add -> <empty>
Rule 103   term_sumres -> <empty>
Rule 104   term_muldiv -> <empty>
Rule 105   expr_rel -> <empty>
Rule 106   oper_o -> <empty>
Rule 107   oper_y -> <empty>
Rule 108   fondo_virtual -> <empty>
Rule 109   pop_fondo_virtual -> <empty>
Rule 110   verifica_name -> <empty>
Rule 111   param_type -> <empty>
Rule 112   rev_quad -> <empty>
Rule 113   function_name -> <empty>
Rule 114   fin_funcion -> <empty>
Rule 115   existe_funcion -> <empty>
Rule 116   crea_funcion -> <empty>
Rule 117   crea_subfuncion -> <empty>
Rule 118   verifica_param -> <empty>
Rule 119   cuenta_parametro -> <empty>
Rule 120   revisar_parametro -> <empty>
Rule 121   revisar_expression -> <empty>
Rule 122   else_expression -> <empty>
Rule 123   condition_end -> <empty>
Rule 124   opera_while -> <empty>
Rule 125   condicion_while -> <empty>
Rule 126   loop_while -> <empty>
Rule 127   opera_for -> <empty>
Rule 128   compara_for -> <empty>
Rule 129   condicion_for -> <empty>
Rule 130   aumenta -> <empty>
Rule 131   loop_for -> <empty>
Rule 132   read_arg_mean -> <empty>
Rule 133   read_arg_median -> <empty>
Rule 134   read_arg_mode -> <empty>
Rule 135   read_arg_varianza -> <empty>
Rule 136   read_arg_esdev -> <empty>
Rule 137   read_instr -> <empty>
Rule 138   write_instr -> <empty>
Rule 139   return_function -> <empty>
Rule 140   return_save_quadruple -> <empty>
Rule 141   end_main -> <empty>

Terminals, with rules where they appear

AND                  : 38
CHAR                 : 17
CHARCTE              : 61
COMMA                : 8 9 13 72 81 82
COMMENT              : 
DIVENT               : 53
DIVIDE               : 54
DO                   : 75 76
ELSE                 : 73
EQ                   : 35 36
ESDEV                : 90
FLOAT                : 16
FLOATCTE             : 60
FOR                  : 76
FUNCION              : 63 64 65 66
GT                   : 44
GTE                  : 45
ID                   : 1 2 3 4 9 11 12 13 14 35 36 37 62 63 64 65 66 69 70 78 79
IF                   : 73 74
INT                  : 15
INTEGERCTE           : 59
LBRACKET             : 18 19 20 21 22 23
LPARENT              : 5 58 67 68 69 70 73 74 75 77 80 85 86 87 88 89 90
LSQUARE              : 12 35 37
LT                   : 42
LTE                  : 43
MAIN                 : 5
MEDIA                : 86
MEDIANA              : 87
MINUS                : 50
MODA                 : 88
MODULE               : 55
NE                   : 47
NEWLINE              : 
OR                   : 40
PLUS                 : 49
POWER                : 56
PROGRAM              : 1 2 3 4
RBRACKET             : 18 19 20 21 22 23
READ                 : 77
RETURN               : 85
RPARENT              : 5 58 67 68 69 70 73 74 75 77 80 85 86 87 88 89 90
RSQUARE              : 12 35 37
SEMI                 : 1 2 3 4 6 7 26 27 31 32 33 34
SIM                  : 46
STRINGCTE            : 82 84
THEN                 : 73 74
TIMES                : 52
TO                   : 76
VAR                  : 7
VARIANZA             : 89
VOID                 : 63 65
WHILE                : 75
WRITE                : 80
error                : 

Nonterminals, with rules where they appear

add_memory           : 12
add_tabla            : 35 36
aumenta              : 76
bloque               : 73 73 74 75 76
compara_for          : 76
condicion_for        : 76
condicion_while      : 75
condition_end        : 73 74
const                : 12 35 37 52 53 54 55 56 57 76 86 87 88 89 90
const_char           : 61
const_float          : 60
const_id             : 35 36 37 62
const_int            : 59
const_str            : 82 84
crea_funcion         : 69 70
crea_subfuncion      : 69 70
cuenta_parametro     : 72
else_expression      : 73
end_main             : 5
existe_funcion       : 69 70
expr                 : 38 39 40
expr_aux             : 40 41 42 43 44 45 46 47
expr_muldiv          : 49 50 51 52 53 54 55 56
expr_rel             : 42 43 44 45 46 47 48
expr_sumres          : 42 43 44 45 46 47 48 49 50
expression           : 35 36 38 58 71 72 73 74 75 81 83 85
fin_funcion          : 63 64 65 66
fondo_virtual        : 58
func_vars            : 13 67
funcion              : 1 2 63 64
funcion_aux          : 69 72
function_all         : 5 63 64 65 66
function_name        : 5 63 64 65 66
list_vars            : 6 7 8 9
loType               : 15 16 17 63 65
loop_for             : 76
loop_while           : 75
main                 : 1 2 3 4
memType              : 10 11 13 14 64 66
oper_o               : 40 41
oper_y               : 38 39
opera_add            : 35 36 38 40 42 43 44 45 46 47 49 50 52 53 54 55 56
opera_for            : 76
opera_while          : 75
param_type           : 13 14
parametro            : 63 64 65 66
pop_fondo_virtual    : 58
programa             : 0
read_1               : 77 78
read_arg_esdev       : 90
read_arg_mean        : 86
read_arg_median      : 87
read_arg_mode        : 88
read_arg_varianza    : 89
read_instr           : 78 79
return_function      : 85
return_save_quadruple : 85
rev_quad             : 63 64 65 66
revisar_expression   : 73 74
revisar_parametro    : 71 72
save_var             : 35 37
statement            : 24 25
statement_assign     : 26 76
statement_condition  : 28
statement_for        : 30
statement_func       : 18 20 22 24
statement_function   : 27
statement_read       : 31
statement_return     : 33
statement_statistics : 34
statement_while      : 29
statement_write      : 32
term_muldiv          : 52 53 54 55 56 57
term_sumres          : 49 50 51
vars                 : 1 3 6 18 19
vars_array           : 8 10
vars_name            : 9 11 12 13 14
vars_type            : 9 11 12 13 14
verifica_name        : 5
verifica_param       : 69
write_1              : 80 81 82
write_instr          : 81 82 83 84

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMI vars funcion main
    (2) programa -> . PROGRAM ID SEMI funcion main
    (3) programa -> . PROGRAM ID SEMI vars main
    (4) programa -> . PROGRAM ID SEMI main

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMI vars funcion main
    (2) programa -> PROGRAM . ID SEMI funcion main
    (3) programa -> PROGRAM . ID SEMI vars main
    (4) programa -> PROGRAM . ID SEMI main

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMI vars funcion main
    (2) programa -> PROGRAM ID . SEMI funcion main
    (3) programa -> PROGRAM ID . SEMI vars main
    (4) programa -> PROGRAM ID . SEMI main

    SEMI            shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMI . vars funcion main
    (2) programa -> PROGRAM ID SEMI . funcion main
    (3) programa -> PROGRAM ID SEMI . vars main
    (4) programa -> PROGRAM ID SEMI . main
    (6) vars -> . vars list_vars SEMI
    (7) vars -> . VAR list_vars SEMI
    (63) funcion -> . FUNCION VOID loType ID function_name parametro rev_quad function_all fin_funcion funcion
    (64) funcion -> . FUNCION memType ID function_name parametro rev_quad function_all fin_funcion funcion
    (65) funcion -> . FUNCION VOID loType ID function_name parametro rev_quad function_all fin_funcion
    (66) funcion -> . FUNCION memType ID function_name parametro rev_quad function_all fin_funcion
    (5) main -> . MAIN function_name verifica_name LPARENT RPARENT function_all end_main

    VAR             shift and go to state 8
    FUNCION         shift and go to state 9
    MAIN            shift and go to state 10

    vars                           shift and go to state 5
    funcion                        shift and go to state 6
    main                           shift and go to state 7

state 5

    (1) programa -> PROGRAM ID SEMI vars . funcion main
    (3) programa -> PROGRAM ID SEMI vars . main
    (6) vars -> vars . list_vars SEMI
    (63) funcion -> . FUNCION VOID loType ID function_name parametro rev_quad function_all fin_funcion funcion
    (64) funcion -> . FUNCION memType ID function_name parametro rev_quad function_all fin_funcion funcion
    (65) funcion -> . FUNCION VOID loType ID function_name parametro rev_quad function_all fin_funcion
    (66) funcion -> . FUNCION memType ID function_name parametro rev_quad function_all fin_funcion
    (5) main -> . MAIN function_name verifica_name LPARENT RPARENT function_all end_main
    (8) list_vars -> . list_vars COMMA vars_array
    (9) list_vars -> . list_vars COMMA ID vars_name vars_type
    (10) list_vars -> . memType vars_array
    (11) list_vars -> . memType ID vars_name vars_type
    (15) memType -> . INT loType
    (16) memType -> . FLOAT loType
    (17) memType -> . CHAR loType

    FUNCION         shift and go to state 9
    MAIN            shift and go to state 10
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    funcion                        shift and go to state 11
    main                           shift and go to state 12
    list_vars                      shift and go to state 13
    memType                        shift and go to state 14

state 6

    (2) programa -> PROGRAM ID SEMI funcion . main
    (5) main -> . MAIN function_name verifica_name LPARENT RPARENT function_all end_main

    MAIN            shift and go to state 10

    main                           shift and go to state 18

state 7

    (4) programa -> PROGRAM ID SEMI main .

    $end            reduce using rule 4 (programa -> PROGRAM ID SEMI main .)


state 8

    (7) vars -> VAR . list_vars SEMI
    (8) list_vars -> . list_vars COMMA vars_array
    (9) list_vars -> . list_vars COMMA ID vars_name vars_type
    (10) list_vars -> . memType vars_array
    (11) list_vars -> . memType ID vars_name vars_type
    (15) memType -> . INT loType
    (16) memType -> . FLOAT loType
    (17) memType -> . CHAR loType

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    list_vars                      shift and go to state 19
    memType                        shift and go to state 14

state 9

    (63) funcion -> FUNCION . VOID loType ID function_name parametro rev_quad function_all fin_funcion funcion
    (64) funcion -> FUNCION . memType ID function_name parametro rev_quad function_all fin_funcion funcion
    (65) funcion -> FUNCION . VOID loType ID function_name parametro rev_quad function_all fin_funcion
    (66) funcion -> FUNCION . memType ID function_name parametro rev_quad function_all fin_funcion
    (15) memType -> . INT loType
    (16) memType -> . FLOAT loType
    (17) memType -> . CHAR loType

    VOID            shift and go to state 20
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    memType                        shift and go to state 21

state 10

    (5) main -> MAIN . function_name verifica_name LPARENT RPARENT function_all end_main
    (113) function_name -> .

    LPARENT         reduce using rule 113 (function_name -> .)

    function_name                  shift and go to state 22

state 11

    (1) programa -> PROGRAM ID SEMI vars funcion . main
    (5) main -> . MAIN function_name verifica_name LPARENT RPARENT function_all end_main

    MAIN            shift and go to state 10

    main                           shift and go to state 23

state 12

    (3) programa -> PROGRAM ID SEMI vars main .

    $end            reduce using rule 3 (programa -> PROGRAM ID SEMI vars main .)


state 13

    (6) vars -> vars list_vars . SEMI
    (8) list_vars -> list_vars . COMMA vars_array
    (9) list_vars -> list_vars . COMMA ID vars_name vars_type

    SEMI            shift and go to state 24
    COMMA           shift and go to state 25


state 14

    (10) list_vars -> memType . vars_array
    (11) list_vars -> memType . ID vars_name vars_type
    (12) vars_array -> . ID vars_name vars_type LSQUARE const RSQUARE add_memory

    ID              shift and go to state 27

    vars_array                     shift and go to state 26

state 15

    (15) memType -> INT . loType
    (91) loType -> .

    ID              reduce using rule 91 (loType -> .)

    loType                         shift and go to state 28

state 16

    (16) memType -> FLOAT . loType
    (91) loType -> .

    ID              reduce using rule 91 (loType -> .)

    loType                         shift and go to state 29

state 17

    (17) memType -> CHAR . loType
    (91) loType -> .

    ID              reduce using rule 91 (loType -> .)

    loType                         shift and go to state 30

state 18

    (2) programa -> PROGRAM ID SEMI funcion main .

    $end            reduce using rule 2 (programa -> PROGRAM ID SEMI funcion main .)


state 19

    (7) vars -> VAR list_vars . SEMI
    (8) list_vars -> list_vars . COMMA vars_array
    (9) list_vars -> list_vars . COMMA ID vars_name vars_type

    SEMI            shift and go to state 31
    COMMA           shift and go to state 25


state 20

    (63) funcion -> FUNCION VOID . loType ID function_name parametro rev_quad function_all fin_funcion funcion
    (65) funcion -> FUNCION VOID . loType ID function_name parametro rev_quad function_all fin_funcion
    (91) loType -> .

    ID              reduce using rule 91 (loType -> .)

    loType                         shift and go to state 32

state 21

    (64) funcion -> FUNCION memType . ID function_name parametro rev_quad function_all fin_funcion funcion
    (66) funcion -> FUNCION memType . ID function_name parametro rev_quad function_all fin_funcion

    ID              shift and go to state 33


state 22

    (5) main -> MAIN function_name . verifica_name LPARENT RPARENT function_all end_main
    (110) verifica_name -> .

    LPARENT         reduce using rule 110 (verifica_name -> .)

    verifica_name                  shift and go to state 34

state 23

    (1) programa -> PROGRAM ID SEMI vars funcion main .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMI vars funcion main .)


state 24

    (6) vars -> vars list_vars SEMI .

    FUNCION         reduce using rule 6 (vars -> vars list_vars SEMI .)
    MAIN            reduce using rule 6 (vars -> vars list_vars SEMI .)
    INT             reduce using rule 6 (vars -> vars list_vars SEMI .)
    FLOAT           reduce using rule 6 (vars -> vars list_vars SEMI .)
    CHAR            reduce using rule 6 (vars -> vars list_vars SEMI .)
    RBRACKET        reduce using rule 6 (vars -> vars list_vars SEMI .)
    ID              reduce using rule 6 (vars -> vars list_vars SEMI .)
    IF              reduce using rule 6 (vars -> vars list_vars SEMI .)
    WHILE           reduce using rule 6 (vars -> vars list_vars SEMI .)
    FOR             reduce using rule 6 (vars -> vars list_vars SEMI .)
    READ            reduce using rule 6 (vars -> vars list_vars SEMI .)
    WRITE           reduce using rule 6 (vars -> vars list_vars SEMI .)
    RETURN          reduce using rule 6 (vars -> vars list_vars SEMI .)
    MEDIA           reduce using rule 6 (vars -> vars list_vars SEMI .)
    MEDIANA         reduce using rule 6 (vars -> vars list_vars SEMI .)
    MODA            reduce using rule 6 (vars -> vars list_vars SEMI .)
    VARIANZA        reduce using rule 6 (vars -> vars list_vars SEMI .)
    ESDEV           reduce using rule 6 (vars -> vars list_vars SEMI .)


state 25

    (8) list_vars -> list_vars COMMA . vars_array
    (9) list_vars -> list_vars COMMA . ID vars_name vars_type
    (12) vars_array -> . ID vars_name vars_type LSQUARE const RSQUARE add_memory

    ID              shift and go to state 36

    vars_array                     shift and go to state 35

state 26

    (10) list_vars -> memType vars_array .

    SEMI            reduce using rule 10 (list_vars -> memType vars_array .)
    COMMA           reduce using rule 10 (list_vars -> memType vars_array .)


state 27

    (11) list_vars -> memType ID . vars_name vars_type
    (12) vars_array -> ID . vars_name vars_type LSQUARE const RSQUARE add_memory
    (92) vars_name -> .

    LSQUARE         reduce using rule 92 (vars_name -> .)
    SEMI            reduce using rule 92 (vars_name -> .)
    COMMA           reduce using rule 92 (vars_name -> .)

    vars_name                      shift and go to state 37

state 28

    (15) memType -> INT loType .

    ID              reduce using rule 15 (memType -> INT loType .)


state 29

    (16) memType -> FLOAT loType .

    ID              reduce using rule 16 (memType -> FLOAT loType .)


state 30

    (17) memType -> CHAR loType .

    ID              reduce using rule 17 (memType -> CHAR loType .)


state 31

    (7) vars -> VAR list_vars SEMI .

    FUNCION         reduce using rule 7 (vars -> VAR list_vars SEMI .)
    MAIN            reduce using rule 7 (vars -> VAR list_vars SEMI .)
    INT             reduce using rule 7 (vars -> VAR list_vars SEMI .)
    FLOAT           reduce using rule 7 (vars -> VAR list_vars SEMI .)
    CHAR            reduce using rule 7 (vars -> VAR list_vars SEMI .)
    RBRACKET        reduce using rule 7 (vars -> VAR list_vars SEMI .)
    ID              reduce using rule 7 (vars -> VAR list_vars SEMI .)
    IF              reduce using rule 7 (vars -> VAR list_vars SEMI .)
    WHILE           reduce using rule 7 (vars -> VAR list_vars SEMI .)
    FOR             reduce using rule 7 (vars -> VAR list_vars SEMI .)
    READ            reduce using rule 7 (vars -> VAR list_vars SEMI .)
    WRITE           reduce using rule 7 (vars -> VAR list_vars SEMI .)
    RETURN          reduce using rule 7 (vars -> VAR list_vars SEMI .)
    MEDIA           reduce using rule 7 (vars -> VAR list_vars SEMI .)
    MEDIANA         reduce using rule 7 (vars -> VAR list_vars SEMI .)
    MODA            reduce using rule 7 (vars -> VAR list_vars SEMI .)
    VARIANZA        reduce using rule 7 (vars -> VAR list_vars SEMI .)
    ESDEV           reduce using rule 7 (vars -> VAR list_vars SEMI .)


state 32

    (63) funcion -> FUNCION VOID loType . ID function_name parametro rev_quad function_all fin_funcion funcion
    (65) funcion -> FUNCION VOID loType . ID function_name parametro rev_quad function_all fin_funcion

    ID              shift and go to state 38


state 33

    (64) funcion -> FUNCION memType ID . function_name parametro rev_quad function_all fin_funcion funcion
    (66) funcion -> FUNCION memType ID . function_name parametro rev_quad function_all fin_funcion
    (113) function_name -> .

    LPARENT         reduce using rule 113 (function_name -> .)

    function_name                  shift and go to state 39

state 34

    (5) main -> MAIN function_name verifica_name . LPARENT RPARENT function_all end_main

    LPARENT         shift and go to state 40


state 35

    (8) list_vars -> list_vars COMMA vars_array .

    SEMI            reduce using rule 8 (list_vars -> list_vars COMMA vars_array .)
    COMMA           reduce using rule 8 (list_vars -> list_vars COMMA vars_array .)


state 36

    (9) list_vars -> list_vars COMMA ID . vars_name vars_type
    (12) vars_array -> ID . vars_name vars_type LSQUARE const RSQUARE add_memory
    (92) vars_name -> .

    LSQUARE         reduce using rule 92 (vars_name -> .)
    SEMI            reduce using rule 92 (vars_name -> .)
    COMMA           reduce using rule 92 (vars_name -> .)

    vars_name                      shift and go to state 41

state 37

    (11) list_vars -> memType ID vars_name . vars_type
    (12) vars_array -> ID vars_name . vars_type LSQUARE const RSQUARE add_memory
    (93) vars_type -> .

    LSQUARE         reduce using rule 93 (vars_type -> .)
    SEMI            reduce using rule 93 (vars_type -> .)
    COMMA           reduce using rule 93 (vars_type -> .)

    vars_type                      shift and go to state 42

state 38

    (63) funcion -> FUNCION VOID loType ID . function_name parametro rev_quad function_all fin_funcion funcion
    (65) funcion -> FUNCION VOID loType ID . function_name parametro rev_quad function_all fin_funcion
    (113) function_name -> .

    LPARENT         reduce using rule 113 (function_name -> .)

    function_name                  shift and go to state 43

state 39

    (64) funcion -> FUNCION memType ID function_name . parametro rev_quad function_all fin_funcion funcion
    (66) funcion -> FUNCION memType ID function_name . parametro rev_quad function_all fin_funcion
    (67) parametro -> . LPARENT func_vars RPARENT
    (68) parametro -> . LPARENT RPARENT

    LPARENT         shift and go to state 45

    parametro                      shift and go to state 44

state 40

    (5) main -> MAIN function_name verifica_name LPARENT . RPARENT function_all end_main

    RPARENT         shift and go to state 46


state 41

    (9) list_vars -> list_vars COMMA ID vars_name . vars_type
    (12) vars_array -> ID vars_name . vars_type LSQUARE const RSQUARE add_memory
    (93) vars_type -> .

    LSQUARE         reduce using rule 93 (vars_type -> .)
    SEMI            reduce using rule 93 (vars_type -> .)
    COMMA           reduce using rule 93 (vars_type -> .)

    vars_type                      shift and go to state 47

state 42

    (11) list_vars -> memType ID vars_name vars_type .
    (12) vars_array -> ID vars_name vars_type . LSQUARE const RSQUARE add_memory

    SEMI            reduce using rule 11 (list_vars -> memType ID vars_name vars_type .)
    COMMA           reduce using rule 11 (list_vars -> memType ID vars_name vars_type .)
    LSQUARE         shift and go to state 48


state 43

    (63) funcion -> FUNCION VOID loType ID function_name . parametro rev_quad function_all fin_funcion funcion
    (65) funcion -> FUNCION VOID loType ID function_name . parametro rev_quad function_all fin_funcion
    (67) parametro -> . LPARENT func_vars RPARENT
    (68) parametro -> . LPARENT RPARENT

    LPARENT         shift and go to state 45

    parametro                      shift and go to state 49

state 44

    (64) funcion -> FUNCION memType ID function_name parametro . rev_quad function_all fin_funcion funcion
    (66) funcion -> FUNCION memType ID function_name parametro . rev_quad function_all fin_funcion
    (112) rev_quad -> .

    LBRACKET        reduce using rule 112 (rev_quad -> .)

    rev_quad                       shift and go to state 50

state 45

    (67) parametro -> LPARENT . func_vars RPARENT
    (68) parametro -> LPARENT . RPARENT
    (13) func_vars -> . memType ID vars_name vars_type param_type COMMA func_vars
    (14) func_vars -> . memType ID vars_name vars_type param_type
    (15) memType -> . INT loType
    (16) memType -> . FLOAT loType
    (17) memType -> . CHAR loType

    RPARENT         shift and go to state 52
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    func_vars                      shift and go to state 51
    memType                        shift and go to state 53

state 46

    (5) main -> MAIN function_name verifica_name LPARENT RPARENT . function_all end_main
    (18) function_all -> . LBRACKET vars statement_func RBRACKET
    (19) function_all -> . LBRACKET vars RBRACKET
    (20) function_all -> . LBRACKET statement_func RBRACKET
    (21) function_all -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 55

    function_all                   shift and go to state 54

state 47

    (9) list_vars -> list_vars COMMA ID vars_name vars_type .
    (12) vars_array -> ID vars_name vars_type . LSQUARE const RSQUARE add_memory

    SEMI            reduce using rule 9 (list_vars -> list_vars COMMA ID vars_name vars_type .)
    COMMA           reduce using rule 9 (list_vars -> list_vars COMMA ID vars_name vars_type .)
    LSQUARE         shift and go to state 48


state 48

    (12) vars_array -> ID vars_name vars_type LSQUARE . const RSQUARE add_memory
    (58) const -> . LPARENT fondo_virtual expression RPARENT pop_fondo_virtual
    (59) const -> . INTEGERCTE const_int
    (60) const -> . FLOATCTE const_float
    (61) const -> . CHARCTE const_char
    (62) const -> . ID const_id

    LPARENT         shift and go to state 58
    INTEGERCTE      shift and go to state 59
    FLOATCTE        shift and go to state 60
    CHARCTE         shift and go to state 61
    ID              shift and go to state 56

    const                          shift and go to state 57

state 49

    (63) funcion -> FUNCION VOID loType ID function_name parametro . rev_quad function_all fin_funcion funcion
    (65) funcion -> FUNCION VOID loType ID function_name parametro . rev_quad function_all fin_funcion
    (112) rev_quad -> .

    LBRACKET        reduce using rule 112 (rev_quad -> .)

    rev_quad                       shift and go to state 62

state 50

    (64) funcion -> FUNCION memType ID function_name parametro rev_quad . function_all fin_funcion funcion
    (66) funcion -> FUNCION memType ID function_name parametro rev_quad . function_all fin_funcion
    (18) function_all -> . LBRACKET vars statement_func RBRACKET
    (19) function_all -> . LBRACKET vars RBRACKET
    (20) function_all -> . LBRACKET statement_func RBRACKET
    (21) function_all -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 55

    function_all                   shift and go to state 63

state 51

    (67) parametro -> LPARENT func_vars . RPARENT

    RPARENT         shift and go to state 64


state 52

    (68) parametro -> LPARENT RPARENT .

    LBRACKET        reduce using rule 68 (parametro -> LPARENT RPARENT .)


state 53

    (13) func_vars -> memType . ID vars_name vars_type param_type COMMA func_vars
    (14) func_vars -> memType . ID vars_name vars_type param_type

    ID              shift and go to state 65


state 54

    (5) main -> MAIN function_name verifica_name LPARENT RPARENT function_all . end_main
    (141) end_main -> .

    $end            reduce using rule 141 (end_main -> .)

    end_main                       shift and go to state 66

state 55

    (18) function_all -> LBRACKET . vars statement_func RBRACKET
    (19) function_all -> LBRACKET . vars RBRACKET
    (20) function_all -> LBRACKET . statement_func RBRACKET
    (21) function_all -> LBRACKET . RBRACKET
    (6) vars -> . vars list_vars SEMI
    (7) vars -> . VAR list_vars SEMI
    (24) statement_func -> . statement statement_func
    (25) statement_func -> . statement
    (26) statement -> . statement_assign SEMI
    (27) statement -> . statement_function SEMI
    (28) statement -> . statement_condition
    (29) statement -> . statement_while
    (30) statement -> . statement_for
    (31) statement -> . statement_read SEMI
    (32) statement -> . statement_write SEMI
    (33) statement -> . statement_return SEMI
    (34) statement -> . statement_statistics SEMI
    (35) statement_assign -> . ID const_id LSQUARE const save_var RSQUARE EQ opera_add expression add_tabla
    (36) statement_assign -> . ID const_id EQ opera_add expression add_tabla
    (69) statement_function -> . ID existe_funcion crea_funcion LPARENT funcion_aux verifica_param RPARENT crea_subfuncion
    (70) statement_function -> . ID existe_funcion crea_funcion LPARENT RPARENT crea_subfuncion
    (73) statement_condition -> . IF LPARENT expression RPARENT THEN revisar_expression bloque ELSE else_expression bloque condition_end
    (74) statement_condition -> . IF LPARENT expression RPARENT THEN revisar_expression bloque condition_end
    (75) statement_while -> . WHILE opera_while LPARENT expression RPARENT condicion_while DO bloque loop_while
    (76) statement_for -> . FOR opera_for statement_assign TO const compara_for condicion_for DO bloque aumenta loop_for
    (77) statement_read -> . READ LPARENT read_1 RPARENT
    (80) statement_write -> . WRITE LPARENT write_1 RPARENT
    (85) statement_return -> . RETURN return_function LPARENT expression RPARENT return_save_quadruple
    (86) statement_statistics -> . MEDIA LPARENT const read_arg_mean RPARENT
    (87) statement_statistics -> . MEDIANA LPARENT const read_arg_median RPARENT
    (88) statement_statistics -> . MODA LPARENT const read_arg_mode RPARENT
    (89) statement_statistics -> . VARIANZA LPARENT const read_arg_varianza RPARENT
    (90) statement_statistics -> . ESDEV LPARENT const read_arg_esdev RPARENT
